--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                           <a href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/DIwebsite.jpg" border="0" alt=""></a>
                     </div>
                     <div class="mdl-card__title">
-                      <a href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><h2 class="mdl-card__title-text">Business Leadership</h2></a>
+                      <a href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><h2 class="mdl-card__title-text">SEO / Business Leadership</h2></a>
                     </div>
                     <div class="mdl-card__supporting-text">
-                                    For 4 years, I had run my own business with my wife.  Our brand was featured on
+                                    For 6+ years, I have run my own business with my wife.  Our brand was featured on
                         <a href="https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0','popup','width=1200,height=1200'); return false;">
                           Fox News</a>, Telemundo and worn by
                           <a href="https://twitter.com/kathyireland/status/898234902679756800" target="popup"
                           onclick="window.open('https://twitter.com/kathyireland/status/898234902679756800','popup','width=1200,height=1200'); return false;">
-                          Kathy Ireland </a> in her first photoshoot of over 10 years.  We had a retail location as well
-                           as website run off of the Shopify platform with a customized theme.
+                          Kathy Ireland </a> in her first photoshoot of over 10 years.  We reopened another retail location (after Covid) as well
+                           as a website with a customized theme runing off of the Shopify platform.
                            The requirements for the theme were conceptualized on paper and edited in
-                            Shopify's Liquid code through collaboration with a Liquid developer.
-                            A successful SEO campaign involving influencers, bloggers, backlink building, and other page optimization techniques was also used to increase search engine rankings.
+                            Shopify's Liquid code in collaboration with a Liquid developer.
+                            A successful SEO campaign involving influencers, bloggers, backlink building, and other page optimization techniques were used to increase search engine rankings.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;">Visit Website</a>
