--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                     </div>
 			
                     <div class="mdl-card__supporting-text">
-                        Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consulting.
+                        Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, Revenue Displacement Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0"   target="popup"
