--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                           Fox News</a>, Telemundo and worn by
                           <a href="https://twitter.com/kathyireland/status/898234902679756800" target="popup"
                           onclick="window.open('https://twitter.com/kathyireland/status/898234902679756800','popup','width=1200,height=1200'); return false;">
-                          Kathy Ireland </a> in her first photoshoot of over 10 years.  We reopened another retail location (after Covid) as well
+                          Kathy Ireland </a> in her first photoshoot of over 10 years.  We reopened another retail location (after Covid with a 2nd location anticipated for July 2022) as well
                            as a website with a customized theme runing off of the Shopify platform.
                            The requirements for the theme were conceptualized on paper and edited in
                             Shopify's Liquid code in collaboration with a Liquid developer.
