--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                            as a website with a customized theme runing off of the Shopify platform.
                            The requirements for the theme were conceptualized on paper and edited in
                             Shopify's Liquid code in collaboration with a Liquid developer.
-                            A successful SEO campaign involving influencers, bloggers, backlink building, and other page optimization techniques were used to increase search engine rankings.
+                            A successful Search Engine Optimization (SEO) campaign involving influencers, bloggers, backlink building, and other page optimization techniques were used to increase search engine rankings.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;">Visit Website</a>
