--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
 <div class="newDiv social_media">
     <a href="mailto:gerald.tom@gmail.com?subject=Hiring%20Inquiry" style="color: white;">
         <i class="fa fa-envelope-o fa-2x"></i>
-	gerald.tom@gmail.com
+<!-- 	gerald.tom@gmail.com blah blah -->
+	<img src=" images/email.jpg" border="0" alt="">    
     </a>
 
+	
+<a href="portfolio-charity.html"><img class="article-image" src=" images/example-work08.jpg" border="0" alt=""></a>	
+	
     <a href="#" style="color: white;">
         <i class="fa fa-phone fa-2x"></i>
-        +1 917 282 2017
+<!--         +1 917 282 2017 blah blah -->
+	<img src=" images/phone.jpg" border="0" alt="">
     </a>
 </div>
 		
@@ -77,7 +82,7 @@
 	  onclick="window.open('https://twitter.com/djangoaddict','popup','width=1200,height=1200'); return false;"">
         <i class="fa fa-twitter fa-2x"></i>@DjangoAddict
 	</a>	      
-				      
+	
 <!-- https://www.youtube.com/channel/UCvbyctBHbdCMVquGJ6TPdrg -->
    <!--  <a href="#" style="color: white;">
         <i class="fa fa-youtube fa-2x" ></i>
