--- a/contact.html
+++ b/contact.html
@@ -58,12 +58,13 @@
 <div class="newDiv social_media">
     <a href="mailto:gerald.tom@gmail.com?subject=Hiring%20Inquiry" style="color: white;">
         <i class="fa fa-envelope-o fa-2x"></i>
-	gerald.tom@gmail.com
+	<img src=" images/email.jpg" border="0" alt="">    
     </a>
 
+	
     <a href="#" style="color: white;">
         <i class="fa fa-phone fa-2x"></i>
-        +1 917 282 2017
+	<img src=" images/phone.jpg" border="0" alt="">
     </a>
 </div>
 		
