--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 			<a name="screens"></a>
 
 			    <!--	ROBIDEX LINKS removed -- Replace# with URL here if repopulating video -->
+			    
                         <a href="#"   target="popup"
   onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 				<img class="article-image" src=" images/example-work02.jpg" border="0" alt=""></a>
@@ -163,8 +164,11 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 			    The program is being used as a proprietary database to generate client leads.  The program concept and code are entirely my own and a second iteration is in development.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex.mp4?dl=0'); return false;">Video Demonstration</a>
+
+			    <!--	ROBIDEX LINKS removed -- Replace# with URL here if repopulating video -->
+			    
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"   target="popup"
+  onclick="window.open('#'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
