--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 	
 	
 	<a href="https://twitter.com/djangoaddict" target="popup" style="color: white;"
-	  onclick="window.open('https://twitter.com/djangoaddict','popup','width=1200,height=1200'); return false;"">
-        <i class="fa fa-twitter fa-2x"></i>@DjangoAddict
+	  onclick="window.open('https://twitter.com/gerald_tom_vsn','popup','width=1200,height=1200'); return false;"">
+        <i class="fa fa-twitter fa-2x"></i>@gerald_tom_vsn
 	</a>	      
 	
 <!-- https://www.youtube.com/channel/UCvbyctBHbdCMVquGJ6TPdrg -->
    <!--  <a href="#" style="color: white;">
         <i class="fa fa-youtube fa-2x" ></i>
-        @DjangoAddict
+        @Gerald_Tom_VSN
     </a> -->
 
 <!-- 	<a href="https://github.com/DjangoAddict/" target="popup" style="color: white;"
