--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	 </a>
 	
 	
-	<a href="https://twitter.com/djangoaddict" target="popup" style="color: white;"
+	<a href="https://twitter.com/gerald_tom_vsn" target="popup" style="color: white;"
 	  onclick="window.open('https://twitter.com/gerald_tom_vsn','popup','width=1200,height=1200'); return false;"">
         <i class="fa fa-twitter fa-2x"></i>@gerald_tom_vsn
 	</a>	      
