--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-- Social Media Icons on Banner  -->
 
 <div class="newDiv social_media">
-    <a href="mailto:gerald.tom@gmail.com?subject=Hiring%20Inquiry" style="color: white;">
+    <a href="mailto:#" style="color: white;">
         <i class="fa fa-envelope-o fa-2x"></i>
 	<img src=" images/email.jpg" border="0" alt="">    
     </a>
