--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-			    <a href="https://www.dropbox.com/scl/fi/2i23dg10q7gng8r7jqim9/123-Street-Real-Estate-Financial-Modeling.mp4?rlkey=cyb2yo54o2beiai7bwv6nl9v6&dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/scl/fi/2i23dg10q7gng8r7jqim9/123-Street-Real-Estate-Financial-Modeling.mp4?rlkey=cyb2yo54o2beiai7bwv6nl9v6&dl=0','popup','width=1200,height=1200'); return false;"">		    
+			    <a href="#" target="popup"
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
                         <img class="article-image" src=" images/RealEstate.png" border="0" alt=""></a>
                     </div>								     
 												     
                     <div class="mdl-card__title">
 			<a href="https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/scl/fi/2i23dg10q7gng8r7jqim9/123-Street-Real-Estate-Financial-Modeling.mp4?rlkey=cyb2yo54o2beiai7bwv6nl9v6&dl=0','popup','width=1200,height=1200'); return false;"">		    
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Real Estate, <p>Financial Modeling </p><p>& Underwriting</p></h2></a>
                     </div>
 			
