--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/scl/fi/2i23dg10q7gng8r7jqim9/123-Street-Real-Estate-Financial-Modeling.mp4?rlkey=cyb2yo54o2beiai7bwv6nl9v6&dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/scl/fi/2i23dg10q7gng8r7jqim9/123-Street-Real-Estate-Financial-Modeling.mp4?rlkey=cyb2yo54o2beiai7bwv6nl9v6&dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"   target="popup"
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
