--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 				<img class="article-image" src=" images/example-work02.jpg" border="0" alt=""></a>
 		    </div>
                     <div class="mdl-card__title">
-                      <a href="#"   target="popup"
-onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
+                      <a href="#">
 			      <h2 class="mdl-card__title-text">Flask / Raw Postgresql</h2></a>
 		    </div>
                     <div class="mdl-card__supporting-text">
@@ -167,8 +166,7 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 
 			    <!--	ROBIDEX LINKS removed -- Replace# with URL here if repopulating video -->
 			    
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"   target="popup"
-  onclick="window.open('#'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#">Video Demonstration</a>
                     </div>
                 </div>
 
@@ -225,14 +223,12 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-			    <a href="#" target="popup"
-  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
+			    <a href="#"">		    
                         <img class="article-image" src=" images/RealEstate.png" border="0" alt=""></a>
                     </div>								     
 												     
                     <div class="mdl-card__title">
-			<a href="https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0" target="popup"
-  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
+			<a href="#">		    
                         <h2 class="mdl-card__title-text">Real Estate, <p>Financial Modeling </p><p>& Underwriting</p></h2></a>
                     </div>
 			
@@ -243,8 +239,7 @@ onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"   target="popup"
-  onclick="window.open('#','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"">Video Demonstration</a>
                     </div>
                 </div>
 
