--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
 
 			    <!--	ROBIDEX LINKS removed -- Replace# with URL here if repopulating video -->
 			    
-                        <a href="#"   target="popup"
-  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">
+                        <a href="#">
 				<img class="article-image" src=" images/example-work02.jpg" border="0" alt=""></a>
 		    </div>
                     <div class="mdl-card__title">
