--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,9 @@
 	 </a>
 	
 	
-	<a href="https://twitter.com/djangoaddict" target="popup" style="color: white;"
-	  onclick="window.open('https://twitter.com/djangoaddict','popup','width=1200,height=1200'); return false;"">
-        <i class="fa fa-twitter fa-2x"></i>@DjangoAddict
+	<a href="https://twitter.com/gerald_tom_vsn" target="popup" style="color: white;"
+	  onclick="window.open('https://twitter.com/gerald_tom_vsn','popup','width=1200,height=1200'); return false;"">
+        <i class="fa fa-twitter fa-2x"></i>@gerald_tom_vsn
 	</a>	      
 				      
 <!-- https://www.youtube.com/channel/UCvbyctBHbdCMVquGJ6TPdrg -->
