--- a/index.html
+++ b/index.html
@@ -247,14 +247,12 @@
 		    
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-			<a href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+ 			<a href="#">		     
                         <img class="article-image" src=" images/Hospitality.png" border="0" alt=""></a>
                     </div>
 			
                     <div class="mdl-card__title">
-			<a href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+ 			<a href="#">		     
                         <h2 class="mdl-card__title-text">Hospitality Management <p>& Consulting</p></h2></a>
                     </div>
 			
@@ -262,8 +260,7 @@
                         Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, Revenue Displacement Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="#">Video Demonstration</a>
                     </div>
                 </div>
 		    
